DEVEXP-374 Now supporting all Spark data types
The Spark JacksonParser class takes care of all the hard work. Added tests for all of the types in Spark's `DataTypes` class.