@@ -1,14 +1,14 @@
 plugins {
-    id 'java'
-    id 'net.saliman.properties' version '1.5.2'
-    id "com.marklogic.ml-gradle" version "4.5.1"
+  id 'java'
+  id 'net.saliman.properties' version '1.5.2'
+  id "com.marklogic.ml-gradle" version "4.5.1"
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
@@ -26,16 +26,5 @@ dependencies {
 }
 
 test {
-    useJUnitPlatform()
+  useJUnitPlatform()
 }
-
-task testMarkLogicSparkReader(type: JavaExec) {
-  description = "testMarkLogicSparkReader"
-  classpath = sourceSets.test.runtimeClasspath
-  main = "testMarkLogicSparkReader"
-  //jvmArgs = ['--add-exports=java.base/sun.nio.ch=ALL-UNNAMED']
-}
-
-// References - https://levelup.gitconnected.com/easy-guide-to-create-a-custom-read-data-source-in-apache-spark-3-194afdc9627a
-//              https://github.com/aamargajbhiye/big-data-projects.git
-//              https://github.com/mongodb/mongo-spark.git
